Fixed alignment

--- a/app/styles/etherwallet-custom.less
+++ b/app/styles/etherwallet-custom.less
@@ -529,6 +529,41 @@ h3{
   color: #062144 !important;
 }
 
+@media screen and (max-width: 51.2rem) {
+  .nav-container .nav-scroll {
+    margin: 0 0% -20px !important;
+  }
+}
+
+
+.btn-gray:hover{
+  border-radius: 3px;
+  background-color: #f5f7fa !important;
+  border: 0px solid #f5f7fa !important;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.71;
+  letter-spacing: normal;
+  color: #6a6f75 !important;
+}
+
+.btn-gray{
+  border-radius: 3px;
+  background-color: #f5f7fa !important;
+  border: 0px solid #f5f7fa !important;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.71;
+  letter-spacing: normal;
+  color: #6a6f75 !important;
+}
+
 .btn-primary.active, .btn-primary.focus, .btn-primary:active, .btn-primary:focus, .btn-primary:hover, .open > .dropdown-toggle.btn-primary {
   color: #fff;
   background-color: #2a65b0 !important;
