--- a/app/styles/etherwallet-new.less
+++ b/app/styles/etherwallet-new.less
@@ -244,9 +244,9 @@ td {
   color: #062144 !important;
   font-weight: 400 !important;
   font-size:12px !important;
-  border: 1px solid #bec5cf !important;
+  border: 1px solid #e4e9f0 !important;
   border-radius: 2px !important;
-  background-color: #bec5cf!important;
+  background-color: #e4e9f0!important;
 }
 
 .mono {
